# comcast-ai-demo

./: .env.example  .gitignore  CLAUDE.md  README.md  next.config.ts  package-lock.json  package.json
app/: layout.tsx  page.tsx  styles.css
app/demo/smb-resolution-copilot/: page.tsx  types.ts
data/corpus/: comcast_business_credits_and_support.md  comcast_business_my_account.md  comcast_business_network_performance.md  comcast_business_service_interruptions.md
data/evals/: resolution_eval_suite_20260508.yaml
data/evals/cases/: connectivity_20260508.yaml  credit_20260508.yaml  mcp_tools_20260508.yaml  model_generation_20260508.yaml  outage_20260508.yaml  prompt_injection_20260508.yaml  rag_governance_20260508.yaml
data/policies/: smb_resolution_policy_20260508.yaml
data/sources/: seed_urls_20260508.yaml
prompts/: customer_response_20260508.md  dispatch_summary_20260508.md  policy_guardrail_20260508.md  triage_agent_20260508.md
services/: __init__.py
services/api/: pyproject.toml  requirements.txt
services/api/app/: __init__.py  agent.py  evals.py  llm.py  main.py  mcp_client.py  models.py  policy.py  rag.py  scenarios.py  tracing.py
services/mcp_server/: __init__.py  server.py  tools.py
