[project]
name = "comcast-business-resolution-copilot-api"
version = "0.1.0"
description = "FastAPI, MCP, RAG, policy, OpenAI, and eval backend for the Comcast Business resolution copilot demo."
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.4",
  "python-dotenv==1.0.1",
  "pyyaml==6.0.2",
  "mcp==1.2.1",
  "openai==2.36.0",
]
